--- a/404.html
+++ b/404.html
@@ -1,7 +1,8 @@
 ---
 layout: default
+title:  "404 | Not Found"
 ---
 
-<h1>Page Not Found</h1>
+<h1>{{ page.title }}</h1>
 
 <p>Unfortunately the page you were looking for wasn't found.</p>
