--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@ title:  Various Musings
 ---
 
 {% for post in paginator.posts %}
-  
+
   {% include post_item.html %}
 
 {% endfor %}
 
-<div class="paginator" id="separator-post">
+<div class="paginator separator-post">
   <div id="menu-down-left">
     {% if paginator.next_page %}
       <h3><a href="/page{{ paginator.next_page }}/">older posts</a></h3>
@@ -28,7 +28,6 @@ title:  Various Musings
         {% endif %}">newer posts</a></h3>
       {% endif %}
   </div>
-  <div id="clear-float">
+  <div class="clear-float">
   </div>
 </div>
-
